exports[`addMark creates an action with the provided mark as payoad 1`] = `
Object {
  "payload": Object {
    "mark": "O",
    "pos": 1,
  },
  "type": "game:add:mark",
}
`;

exports[`addMark creates an action with the provided mark as payoad 2`] = `
Object {
  "payload": Object {
    "mark": "X",
    "pos": 0,
  },
  "type": "game:add:mark",
}
`;

exports[`addMark creates an action with the provided mark as payoad 3`] = `
Object {
  "payload": Object {
    "mark": "✓",
    "pos": 5,
  },
  "type": "game:add:mark",
}
`;
